Fixed icons not showing mouse cursor Fixed conferencers

--- a/assets/stylesheets/_blog.scss
+++ b/assets/stylesheets/_blog.scss
@@ -187,14 +187,17 @@
 
 #article-tw {
 	background-color: #78cdf0;
+	cursor: pointer;
 }
 
 #article-fb {
 	background-color: #537bbd;
+	cursor: pointer;
 }
 
 #article-li {
 	background-color: #2085c7;
+	cursor: pointer;
 }
 
 #article-navigate {
@@ -202,7 +205,7 @@
 }
 
 .article-navButton {
-	
+
 	width: 15em;
 	height: 4em;
 	line-height: 4em;
